<resources>
    <string name="app_name">OOP Project</string>
    <string name="welcome_to">Welcome To</string>
    <string name="created_by">Created by: Patrick\nGemi\nHaneen\nDJ Khaled</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_admin">Admin</string>
    <string name="menu_employee">Employee</string>
    <string name="menu_user">User</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="account_email_com">acccount@email.com</string>
</resources>