<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_in_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginpng"

    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="1dp"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <EditText
        android:id="@+id/username_textfield"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="270dp"
        android:autofillHints=""
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:selectAllOnFocus="true"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/password_textfield"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:selectAllOnFocus="true"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_textfield"
        tools:ignore="VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/sign_in_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="150dp"
        android:text="@string/action_sign_in_short"
        android:textColor="#000000"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/username_textfield"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/admin_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="48dp"
        android:backgroundTint="#228BFC"
        android:onClick="chooseEmpType"
        android:padding="5dp"
        android:radius="30dp"
        android:text="@string/menu_admin"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/employee_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:backgroundTint="#228BFC"
        android:onClick="chooseEmpType"
        android:padding="5dp"
        android:radius="30dp"
        android:text="@string/menu_employee"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/user_button"
        app:layout_constraintStart_toEndOf="@+id/admin_button" />

    <Button
        android:id="@+id/user_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="48dp"
        android:backgroundTint="#228BFC"
        android:onClick="chooseEmpType"
        android:padding="5dp"
        android:radius="30dp"
        android:text="@string/menu_user"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/sign_in_register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#228BFC"
        android:onClick="signInButton"
        android:padding="5dp"
        android:radius="30dp"
        android:text="@string/action_sign_in"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/employee_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_textfield" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="110dp"
        android:layout_height="115dp"
        android:layout_marginLeft="95dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sign_in_text"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/splash_screen_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>